--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,8 @@
 <div class="header">
     <div class="logo">
         <a href="/">
+            <img src="/media/images/design/header_logo.png" width="25%">
+            <!--
             <span class="slotalarm_logo">
                 SLOT
                 <span class="slotalarm_logo slotalarm_letter">A</span>
@@ -9,6 +11,7 @@
                 <span class="slotalarm_logo slotalarm_letter">R</span>
                 <span class="slotalarm_logo slotalarm_letter">M</span>
             </span>
+            -->
         </a>
     </div>
     <div class="social_header">
