--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,10 +8,10 @@
         </label>
     </div>
     <div class="social_footer">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-twitch"></i>
-        <i class="fa-brands fa-kickstarter"></i>
+        <i class="social fa-brands fa-facebook"></i>
+        <i class="social fa-brands fa-youtube"></i>
+        <i class="social fa-brands fa-twitch"></i>
+        <i class="social fa-brands fa-kickstarter"></i>
     </div>
 </div>
 
