--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,6 @@
 <div class="header">
     <div class="logo">
         <a href="/">
-            <img src="/media/images/design/header_logo.png" width="25%">
-            <!--
             <span class="slotalarm_logo">
                 SLOT
                 <span class="slotalarm_logo slotalarm_letter">A</span>
@@ -11,13 +9,13 @@
                 <span class="slotalarm_logo slotalarm_letter">R</span>
                 <span class="slotalarm_logo slotalarm_letter">M</span>
             </span>
-            -->
+            <br>
+            <img src="/media/images/design/header_logo.webp" height="100px">
         </a>
-    </div>
-    <div class="social_header">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-twitch"></i>
-        <i class="fa-brands fa-kickstarter"></i>
+        <br>
+        <i class="social fa-brands fa-facebook"></i>
+        <i class="social fa-brands fa-youtube"></i>
+        <i class="social fa-brands fa-twitch"></i>
+        <i class="social fa-brands fa-kickstarter"></i>
     </div>
 </div>
