--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,10 +8,11 @@
         </label>
     </div>
     <div class="social_footer">
-        <i class="social fa-brands fa-facebook"></i>
-        <i class="social fa-brands fa-youtube"></i>
-        <i class="social fa-brands fa-twitch"></i>
-        <i class="social fa-brands fa-kickstarter"></i>
+        <a href="{{ social_media_links.facebook }}" target="_blank"><i class="social fa-brands fa-facebook"></i></a>
+        <a href="{{ social_media_links.youtube }}" target="_blank"><i class="social fa-brands fa-youtube"></i></a>
+        <a href="{{ social_media_links.twitch }}" target="_blank"><i class="social fa-brands fa-twitch"></i></a>
+        <a href="{{ social_media_links.instagram }}" target="_blank"><i class="social fa-brands fa-instagram"></i></a>
+        <a href="{{ social_media_links.kick }}" target="_blank"><i class="social fa-brands fa-kickstarter"></i></a>
     </div>
 </div>
 
