--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,6 +13,7 @@
         <a href="{{ social_media_links.twitch }}" target="_blank"><i class="social fa-brands fa-twitch"></i></a>
         <a href="{{ social_media_links.instagram }}" target="_blank"><i class="social fa-brands fa-instagram"></i></a>
         <a href="{{ social_media_links.kick }}" target="_blank"><i class="social fa-brands fa-kickstarter"></i></a>
+        <a href="{{ social_media_links.dlive }}" target="_blank"><i class="social fa-solid fa-user-ninja"></i></a>
     </div>
 </div>
 
