--- a/casinos/static/css/style.css
+++ b/casinos/static/css/style.css
@@ -34,24 +34,24 @@
 }
 
 body {
-  background-color: rgb(var(--background_color_dark_mode));
-  color: rgb(var(--text_color_dark_mode));
-  font-family: Verdana;
-  transition: background-color 0.5s ease;
+    background-color: rgb(var(--background_color_dark_mode));
+    color: rgb(var(--text_color_dark_mode));
+    font-family: Verdana;
+    transition: background-color 0.5s ease;
 }
 
 .light-mode {
-  --background_color_dark_mode: var(--background_color_light_mode);
-  --text_color_dark_mode: var(--text_color_light_mode);
-  --textfield_color_dark_mode: var(--textfield_color_light_mode);
-  --container_background_dark_mode: var(--container_background_light_mode);
-  --container_background_dark_mode_alpha: var(--container_background_light_mode_alpha);
-  --content_background_dark_mode: var(--content_background_light_mode);
-  --slotalarm_logo_dark_mode: var(--slotalarm_logo_light_mode);
+    --background_color_dark_mode: var(--background_color_light_mode);
+    --text_color_dark_mode: var(--text_color_light_mode);
+    --textfield_color_dark_mode: var(--textfield_color_light_mode);
+    --container_background_dark_mode: var(--container_background_light_mode);
+    --container_background_dark_mode_alpha: var(--container_background_light_mode_alpha);
+    --content_background_dark_mode: var(--content_background_light_mode);
+    --slotalarm_logo_dark_mode: var(--slotalarm_logo_light_mode);
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 ul {
@@ -85,46 +85,46 @@ input {
 }
 
 .modeswitch_switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
 }
 
 .modeswitch_switch input {
-  display: none;
+    display: none;
 }
 
 .modeswitch_slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgb(var(--content_background_dark_mode));
-  transition: 0.4s;
-  border-radius: 34px;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(var(--content_background_dark_mode));
+    transition: 0.4s;
+    border-radius: 34px;
 }
 
 .modeswitch_slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: rgb(var(--text_color_dark_mode));
-  transition: 0.4s;
-  border-radius: 50%;
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: rgb(var(--text_color_dark_mode));
+    transition: 0.4s;
+    border-radius: 50%;
 }
 
 .modeswitch_input:checked + .modeswitch_slider {
-  background-color: rgb(var(--first_color));
+    background-color: rgb(var(--first_color));
 }
 
 .modeswitch_input:checked + .modeswitch_slider:before {
-  transform: translateX(26px);
+    transform: translateX(26px);
 }
 
 /* MODESWITCH SLIDER END */
@@ -199,6 +199,7 @@ input {
 .casino_bonus, .einzahlungsbetrag, .bonusguthaben, .wager, .gesamtguthaben {
     flex: 1; /* This will make each element take up equal space within the flex container */
     white-space: nowrap;
+    color: inherit;
     font-family: inherit;
     font-style: inherit;
     font-size: 18px;
@@ -360,23 +361,23 @@ input {
 }
 
 .ribbon {
-  color: rgb(var(--font_color_button));
-  font-size: 1em;
-  font-weight: 700;
-  padding: 5px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  text-align: center;
-  border-radius: 10px 0 10px 0;
+    color: rgb(var(--font_color_button));
+    font-size: 1em;
+    font-weight: 700;
+    padding: 5px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    text-align: center;
+    border-radius: 10px 0 10px 0;
 }
 
 .ribbon_code {
-  background-color: rgb(var(--blue_color));
+    background-color: rgb(var(--blue_color));
 }
 
 .ribbon_new {
-  background-color: rgb(var(--first_color));
+    background-color: rgb(var(--first_color));
 }
 
 .panel {
@@ -396,14 +397,24 @@ input {
 .filter_row {
     display: flex;
     align-items: center;
+    padding: .5em;
+    cursor: pointer;
     background: rgb(var(--textfield_color_dark_mode));
-    border-bottom: 1px solid rgb(var(--container_background_dark_mode));
+    border-bottom: 2px solid rgb(var(--container_background_dark_mode));
+}
+
+.filter_row:hover {
+    color: black;
+    background-color: rgb(var(--second_color)); /* Change background color on hover */
 }
 
 .filter_checkbox {
-    width: 1.5em;
-    height: 1.5em;
-    margin: 1em;
+    display: none; /* Hide the actual checkboxes */
+}
+
+.filter_checkbox:checked + .filter_row {
+    color: black;
+    background-color: rgb(var(--second_color)); /* Change background color when checkbox is checked */
 }
 
 .accordion {
@@ -618,7 +629,6 @@ input {
     grid-column: span 3;
 }
 
-
 /* As we cannot replace the numbers with variables or calls to element properties,
 the number of this selector parts is our tab count limit */
 .tabbed [type="radio"]:nth-of-type(1):checked ~ .tabs .tab:nth-of-type(1) label,
@@ -666,12 +676,29 @@ the number of this selector parts is our tab count limit */
 }
 
 @media screen and (max-width: 1600px) {
+
+    .panel {
+        flex-wrap: wrap;
+    }
+
+    .filter_checkbox {
+        margin: 0 .5em 0 0;
+    }
+
+    .filter_row {
+        display: flex; /* Ensure the children of .filter_row are laid out in a row */
+        white-space: nowrap;
+        border: 3px solid rgb(var(--container_background_dark_mode));
+        flex: 1; /* Each child takes up equal space */
+        width: 100%; /* Ensure each child takes up all available horizontal space */
+    }
+
     .accordion {
         text-align: center;
     }
 
     .content {
-    display: block;
+        display: block;
     }
 
     .left_container, .right_container {
@@ -683,37 +710,37 @@ the number of this selector parts is our tab count limit */
 
 @media screen and (max-width: 1280px) {
 
-  .casino_list_item {
-    display: block;
-  }
+    .casino_list_item {
+        display: block;
+    }
 
-  .casino_list_item_icon {
-    min-height: 150px;
-    border-radius: 10px 10px 0 0;
-    background-size: contain, contain, 500%;
-  }
+    .casino_list_item_icon {
+        min-height: 150px;
+        border-radius: 10px 10px 0 0;
+        background-size: contain, contain, 500%;
+    }
 
-  .casino_list_item_affiliate_link {
-    display: block;
-    padding: 15px;
-    margin: 0;
-  }
+    .casino_list_item_affiliate_link {
+        display: block;
+        padding: 15px;
+        margin: 0;
+    }
 
-  .tab-content {
-    padding: 0;
-  }
+    .tab-content {
+        padding: 0;
+    }
 
-  .tab_content_1_cols, .tab_content_3_cols, .tab_content_1_col, .tab_content_3_col,
-  .tab_content_4_cols, .tab_content_4_col {
-    padding: 10px 0 10px 0;
-    display: block;
-    text-align: center;
-  }
+    .tab_content_1_cols, .tab_content_3_cols, .tab_content_1_col, .tab_content_3_col,
+    .tab_content_4_cols, .tab_content_4_col {
+        padding: 10px 0 10px 0;
+        display: block;
+        text-align: center;
+    }
 
-  .casino_bonus, .wager, .gesamtguthaben, .bonusguthaben, .einzahlungsbetrag {
-    display: block;
-    /* margin: 0 0 10px 0; */
-  }
+    .casino_bonus, .wager, .gesamtguthaben, .bonusguthaben, .einzahlungsbetrag {
+        display: block;
+        /* margin: 0 0 10px 0; */
+    }
 
     .casino_bonus {
         margin: 10px 0;
@@ -724,27 +751,27 @@ the number of this selector parts is our tab count limit */
         margin: 0;
     }
 
-  .sort_button {
-    font-size: 12px;
-    font-weight: 700;
-  }
+    .sort_button {
+        font-size: 12px;
+        font-weight: 700;
+    }
 
-  .list_icon, .list_icon:last-of-type {
-    margin: 0;
-  }
+    .list_icon, .list_icon:last-of-type {
+        margin: 0;
+    }
 
-  .tabs {
-	justify-content: space-between;
-  }
+    .tabs {
+        justify-content: space-between;
+    }
 
-  .tab > label {
-    font-size: 10px;
-  }
+    .tab > label {
+        font-size: 10px;
+    }
 
-  .tab {
-    font-size: 10px;
-    width: 100%;
-  }
+    .tab {
+        font-size: 10px;
+        width: 100%;
+    }
 
     .tabbed [type="radio"]:nth-of-type(1):checked ~ .tab-content:nth-of-type(1) {
         background: linear-gradient(to top, rgba(var(--container_background_dark_mode),1), rgba(var(--container_background_dark_mode),0) 25%),
