--- a/templates/main.html
+++ b/templates/main.html
@@ -1,21 +1,25 @@
-<!DOCTYPE html>
+{% load analytical %}
 {% load static %}
+<!DOCTYPE html>
 <html>
 <head>
+    {% analytical_head_top %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SLOTALARM</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://kit.fontawesome.com/4d6249dd3a.js" crossorigin="anonymous"></script>
+    {% analytical_head_bottom %}
 </head>
 
 <body>
+    {% analytical_body_top %}
     {% include 'navbar.html' %}
 
     {% block content %}
     {% endblock %}
 
     {% include 'footer.html' %}
-
+    {% analytical_body_bottom %}
 </body>
 </html>
