--- a/templates/main.html
+++ b/templates/main.html
@@ -1,25 +1,29 @@
-{% load analytical %}
 {% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-    {% analytical_head_top %}
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QZ5C98E82T"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QZ5C98E82T');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SLOTALARM</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://kit.fontawesome.com/4d6249dd3a.js" crossorigin="anonymous"></script>
-    {% analytical_head_bottom %}
 </head>
 
 <body>
-    {% analytical_body_top %}
     {% include 'navbar.html' %}
 
     {% block content %}
     {% endblock %}
 
     {% include 'footer.html' %}
-    {% analytical_body_bottom %}
 </body>
 </html>
